refactorización y mejoras en algunas estrategias