@@ -5,32 +5,32 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.luben.zstd.ZstdInputStream;
 import com.github.luben.zstd.ZstdOutputStream;
-import lombok.Getter;
 import lombok.experimental.UtilityClass;
+import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import xyz.cereshost.vesta.common.Vesta;
 import xyz.cereshost.vesta.common.market.*;
 import xyz.cereshost.vesta.common.packet.Utils;
-import xyz.cereshost.vesta.common.packet.client.RequestMarketClient;
-import xyz.cereshost.vesta.common.packet.server.MarketDataServer;
-import xyz.cereshost.vesta.core.DataSource;
 import xyz.cereshost.vesta.core.Main;
 import xyz.cereshost.vesta.core.ia.VestaEngine;
-import xyz.cereshost.vesta.core.packet.PacketHandlerClient;
+import xyz.cereshost.vesta.core.io.setup.LoadDataMethodBinance;
+import xyz.cereshost.vesta.core.io.setup.LoadDataMethodLocal;
+import xyz.cereshost.vesta.core.io.setup.LoadDataMethodLocalIndex;
+import xyz.cereshost.vesta.core.io.setup.LoadDataMethodLocalRange;
 
 import java.io.*;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.time.LocalDate;
 import java.time.YearMonth;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
-import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.FutureTask;
-import java.util.concurrent.atomic.AtomicLong;
-import java.util.concurrent.atomic.AtomicReference;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 import java.util.zip.ZipInputStream;
@@ -38,8 +38,6 @@ import java.util.zip.ZipInputStream;
 @UtilityClass
 public class IOMarket {
 
-//    public static final int TRADE_BIN_MAGIC = 0x54524431;
-//    public static final int KLINE_BIN_MAGIC = 0x4B4C4E31;
     static final int BIN_VERSION = 1;
     private static final int BATCH_SIZE = 50_000;
     public static final String STORAGE_DIR = "data";
@@ -53,19 +51,14 @@ public class IOMarket {
     // dayIndex=1 => ayer (dataset diario completo más reciente).
     private static final int DEFAULT_LOOKBACK_DAY_INDEX = 1;
 
-    public static Market loadMarketsRecentDays(Symbol s, int days, boolean loadTrades) throws InterruptedException, IOException {
+    public static @NotNull Market loadMarketsRecentDays(TypeMarket typeMarket, int days, boolean loadTrades) throws InterruptedException, IOException {
         int normalizedDays = Math.max(1, days);
-        Market merged = new Market(s);
+        Market merged = new Market(typeMarket);
 
         // Cargar desde el día más antiguo al más reciente para mantener orden temporal.
         for (int dayIndex = normalizedDays; dayIndex >= DEFAULT_LOOKBACK_DAY_INDEX; dayIndex--) {
             Market dayMarket;
-            try {
-                dayMarket = loadMarkets(DataSource.LOCAL_ZST, s, dayIndex, loadTrades);
-            } catch (IOException e) {
-                Vesta.warning("No se pudo cargar LOCAL_ZIP %s (idx=%d): %s", s, dayIndex, e.getMessage());
-                continue;
-            }
+            dayMarket = loadMarket(typeMarket, new LoadDataMethodLocalIndex(loadTrades, dayIndex));
             if (dayMarket == null) {
                 continue;
             }
@@ -81,21 +74,51 @@ public class IOMarket {
         return merged;
     }
 
-    public static Market loadMarkets(DataSource data, Symbol symbol) throws InterruptedException, IOException {
-        return loadMarkets(data, symbol, -1, true);
+    public static @NotNull Market loadMarket(@NotNull TypeMarket type, @NotNull LoadDataMethodBinance loadDataSetup){
+        return loadMarketsBinance(type, loadDataSetup.getLimitCandle(), loadDataSetup.getLimitTrade(), loadDataSetup.getLimitDepth());
     }
 
-    public static Market loadMarkets(DataSource data, Symbol symbol, int dayIndex) throws InterruptedException, IOException {
-        return loadMarkets(data, symbol, dayIndex, true);
+    public static Market loadMarket(@NotNull TypeMarket type, @NotNull LoadDataMethodLocal loadDataSetup){
+        switch (loadDataSetup){
+            case LoadDataMethodLocalRange setupLocal -> {
+                List<CompletableFuture<Market>> task = new ArrayList<>();
+                Market market = new Market(type);
+                for (int i = setupLocal.getEndDay(); i >= setupLocal.getStartDay(); i--) {
+                    int index = i;
+                    task.add(CompletableFuture.supplyAsync(() ->
+                            loadMarketLocal(type, index, setupLocal.isLoadTrades()),
+                            VestaEngine.EXECUTOR_AUXILIAR_BUILD
+                    ));
+                }
+                for (CompletableFuture<Market> future : task) {
+                    try {
+                        Market m = future.get();
+                        if (m == null) continue;
+                        market.concat(m);
+                    }catch (InterruptedException | ExecutionException e){
+                        Vesta.sendWaringException("error al obtener los datos en el loop", e);
+                    }
+                }
+                market.sortd();
+                return market;
+            }
+            case LoadDataMethodLocalIndex setupLocal -> {
+                return loadMarketLocal(type, setupLocal.getIndexDay(), setupLocal.isLoadTrades());
+            }
+            default -> throw new IllegalStateException("Unexpected value: " + loadDataSetup);
+        }
     }
 
-    public static Market loadMarketsBinance(Symbol s,
-                                            int limitCandle,
+    private static Market loadMarketsBinance(TypeMarket typeMarket,
+                                            int limitKlines,
                                             int limitTrade,
                                             int limitDepth
     ){
-        Vesta.info("📡 Solicitud de dato a binance del mercado: " + s);
-        String rawCandles = Utils.getRequest("https://fapi.binance.com/fapi/v1/klines" + "?symbol=" + s + "&interval=1m&limit=" + limitCandle);
+        final Symbol symbol = typeMarket.symbol();
+        final TimeFrameMarket timeFrameMarket = typeMarket.timeFrameMarket();
+
+        Vesta.info("📡 Solicitud de dato a binance del mercado: " + symbol);
+        String rawCandles = Utils.getRequest("https://fapi.binance.com/fapi/v1/klines" + "?symbol=" + symbol + "&interval=" + timeFrameMarket.getKeyName() + "&limit=" + limitKlines);
         ObjectMapper mapperCandles = new ObjectMapper(); // https://testnet.binancefuture.com
         JsonNode root1;
         try {
@@ -104,7 +127,7 @@ public class IOMarket {
             throw new RuntimeException(e);
         }
         ArrayDeque<Candle> deque = new ArrayDeque<>();
-        Vesta.info("📂 Datos recibidos de binance del mercado: " + s + " (" + rawCandles.getBytes(StandardCharsets.UTF_8).length / 1024 + "mb)");
+        Vesta.info("📂 Datos recibidos de binance del mercado: " + symbol + " (" + rawCandles.getBytes(StandardCharsets.UTF_8).length / 1024 + "mb)");
         for (JsonNode kline : root1) {
             double baseVolume = kline.get(5).asDouble();
             double quoteVolume = kline.get(7).asDouble();  // USDT
@@ -114,7 +137,7 @@ public class IOMarket {
             double deltaUSDT = takerBuyQuoteVolume - sellQuoteVolume;
             double buyRatio = takerBuyQuoteVolume / quoteVolume;
             deque.add(new Candle(
-                    TimeUnitMarket.ONE_MINUTE,
+                    TimeFrameMarket.ONE_MINUTE,
                     kline.get(0).asLong(),
                     kline.get(1).asDouble(), // open
                     kline.get(2).asDouble(), // high
@@ -122,142 +145,116 @@ public class IOMarket {
                     kline.get(4).asDouble(), // close
                     new Volumen(quoteVolume, baseVolume, takerBuyQuoteVolume, sellQuoteVolume, deltaUSDT, buyRatio)));
         }
-        Market market = new Market(s);
+        Market market = new Market(typeMarket);
         ObjectMapper mapperTrade = new ObjectMapper();
-        JsonNode rootTrade;
-        try {
-            rootTrade = mapperTrade.readTree(Utils.getRequest("https://fapi.binance.com/fapi/v1/trades" + "?symbol=" + s + "&limit=" + limitTrade));
-        } catch (JsonProcessingException e) {
-            throw new RuntimeException(e);
+        if (limitTrade > 0) {
+            JsonNode rootTrade;
+            try {
+                rootTrade = mapperTrade.readTree(Utils.getRequest("https://fapi.binance.com/fapi/v1/trades" + "?symbol=" + symbol + "&limit=" + limitTrade));
+            } catch (JsonProcessingException e) {
+                throw new RuntimeException(e);
+            }
+            Deque<Trade> trades = new ArrayDeque<>();
+            for (JsonNode trade : rootTrade) {
+                double quoteQty = trade.get("quoteQty").asDouble();
+                double price = trade.get("price").asDouble();
+                boolean isBuyerMaker = trade.get("isBuyerMaker").asBoolean();
+                long time = trade.get("time").asLong();
+                trades.add(new Trade(time, (float) price, (float) quoteQty, isBuyerMaker));
+            }
+            market.addTrade(trades);
         }
-        Deque<Trade> trades = new ArrayDeque<>();
-        for (JsonNode trade : rootTrade) {
-            double quoteQty = trade.get("quoteQty").asDouble();
-            double price = trade.get("price").asDouble();
-            boolean isBuyerMaker = trade.get("isBuyerMaker").asBoolean();
-            long time = trade.get("time").asLong();
-            trades.add(new Trade(time, (float) price, (float) quoteQty, isBuyerMaker));
+        if (limitDepth > 0) {
+            String rawDepth = Utils.getRequest("https://fapi.binance.com/fapi/v1/depth" + "?symbol=" + symbol + "&limit=" + limitDepth);
+            OrderBookRaw orderBookRaw = Main.GSON.fromJson(rawDepth, OrderBookRaw.class);
+            Depth depth = new Depth(System.currentTimeMillis(),
+                    orderBookRaw.bids().stream().map(list ->
+                            new Depth.OrderLevel(Double.parseDouble(list.getFirst()), Double.parseDouble(list.get(1)))).toList(),
+                    orderBookRaw.asks().stream().map(list ->
+                            new Depth.OrderLevel(Double.parseDouble(list.getFirst()), Double.parseDouble(list.get(1)))).toList()
+            );
+            market.addDepth(depth);
         }
-        market.addTrade(trades);
-        String rawDepth = Utils.getRequest("https://fapi.binance.com/fapi/v1/depth" + "?symbol=" + s + "&limit=" + limitDepth);
-        OrderBookRaw orderBookRaw = Main.GSON.fromJson(rawDepth, OrderBookRaw.class);
-        Depth depth = new Depth(System.currentTimeMillis(),
-                orderBookRaw.getBids().stream().map(list ->
-                        new Depth.OrderLevel(Double.parseDouble(list.getFirst()), Double.parseDouble(list.get(1)))).toList(),
-                orderBookRaw.getAsks().stream().map(list ->
-                        new Depth.OrderLevel(Double.parseDouble(list.getFirst()), Double.parseDouble(list.get(1)))).toList()
-        );
 
         market.addCandles(deque);
-        market.addDepth(depth);
         return market;
     }
 
-    public static Market loadMarkets(DataSource data, Symbol s, int dayIndex, boolean loadTrades) throws InterruptedException, IOException {
-        CountDownLatch latch = new CountDownLatch(1);
-        AtomicLong lastUpdate = new AtomicLong();
-        AtomicReference<Market> marketFinal = new AtomicReference<>(null);
-        String baseDir = STORAGE_DIR.toString();
-        switch (data) {
-            case LOCAL_NETWORK, LOCAL_NETWORK_MINIMAL -> {
-                Vesta.info("📡 Enviado solicitud de datos del mercado: " + s);
-                PacketHandlerClient.sendPacket(new RequestMarketClient(s.toString(), data == DataSource.LOCAL_NETWORK), MarketDataServer.class).thenAccept(packet -> {
-                    marketFinal.set(packet.getMarket());
-                    latch.countDown();
-                    lastUpdate.set(packet.getLastUpdate());
-                    Vesta.info("✅ Datos del mercado " + s + " recibidos de "+  s);
-                });
+    private static Market loadMarketLocal(@NotNull TypeMarket typeMarket, int dayIndex, boolean loadTrades){
+        final Symbol symbol = typeMarket.symbol();
+        final TimeFrameMarket timeFrameMarket = typeMarket.timeFrameMarket();
+
+        int normalizedDayIndex = Math.max(1, dayIndex);
+        LocalDate targetDate = resolveDateFromDayIndex(normalizedDayIndex);
+        int targetYear = targetDate.getYear();
+        int targetMonth = targetDate.getMonthValue();
+        int targetDay = targetDate.getDayOfMonth();
+
+        try {
+            long timeTotal = System.currentTimeMillis();
+            Vesta.info("%d/%02d/%02d (idx=%d) 💾 Leyendo zst local de klines", targetYear, targetMonth, targetDay, normalizedDayIndex);
+            File klineFile = ensureFileCached(typeMarket, TypeData.KLINES, targetDate);
+            Deque<Candle> candles = parseKlinesFromFile(klineFile);
+            Vesta.info("%d/%02d/%02d (idx=%d) 💾 Leyendo zst local de trades", targetYear, targetMonth, targetDay, normalizedDayIndex);
+            Deque<Trade> trades;
+            if (loadTrades){
+                File tradeFile = ensureFileCached(typeMarket, TypeData.TRADES, targetDate);
+                trades = parseTradesFromFile(tradeFile);
+            }else {
+                trades = new ArrayDeque<>();
             }
-            case BINANCE -> {
-                long timeTotal = System.currentTimeMillis();
-                marketFinal.set(loadMarketsBinance(s, 1000, 1000, 100));
-                Vesta.info("✅ Datos procesado de binance del mercado: %s (%.2fs)", s, (float) (System.currentTimeMillis() - timeTotal) / 1000);
-                latch.countDown();
+            if (candles.isEmpty()) {
+                Vesta.info("Datos incompletos o corruptos para %s en %d/%02d/%02d (idx=%d)", symbol, targetYear, targetMonth, targetDay, normalizedDayIndex);
+                return null;
             }
-            case LOCAL_ZST -> {
-                // Normalizar dayIndex a >= 1
-                int normalizedDayIndex = Math.max(1, dayIndex);
-                LocalDate targetDate = resolveDateFromDayIndex(normalizedDayIndex);
-                int targetYear = targetDate.getYear();
-                int targetMonth = targetDate.getMonthValue();
-                int targetDay = targetDate.getDayOfMonth();
+            int sizeCandles = candles.size();
+            int sizeTrades = trades.size();
+            Vesta.info("%d/%02d/%02d (idx=%d) 🔒 Asegurando orden de los datos", targetYear, targetMonth, targetDay, normalizedDayIndex);
+            LinkedHashSet<Candle> candlesSorted = Market.sortd(candles, 10_000, Candle::getOpenTime);
+            LinkedHashSet<Trade> tradeSorted = Market.sortd(trades, 10_000, Trade::time);
 
-                long timeTotal = System.currentTimeMillis();
-                Vesta.info("%d/%02d/%02d (idx=%d) 💾 Leyendo zst local de klines", targetYear, targetMonth, targetDay, normalizedDayIndex);
-                File klineFile = ensureFileCached(baseDir, s, "klines", targetDate);
-                Deque<Candle> candles = parseKlinesFromFile(klineFile);
-                Vesta.info("%d/%02d/%02d (idx=%d) 💾 Leyendo zst local de trades", targetYear, targetMonth, targetDay, normalizedDayIndex);
-                Deque<Trade> trades;
-                if (loadTrades){
-                    File tradeFile = ensureFileCached(baseDir, s, "trades", targetDate);
-                    trades = parseTradesFromFile(tradeFile);
-                }else {
-                    trades = new ArrayDeque<>();
+            if (loadTrades){
+                // 3. Lógica de CORTE (Sincronización de tiempos)
+                long minTimeCandles = candlesSorted.getFirst().getOpenTime();
+                long maxTimeCandles = candlesSorted.getLast().getOpenTime();
+
+                long minTimeTrades = tradeSorted.getFirst().time();
+                long maxTimeTrades = tradeSorted.getLast().time();
+
+                long commonStart = Math.max(minTimeCandles, minTimeTrades);
+                long commonEnd = Math.min(maxTimeCandles, maxTimeTrades);
+
+                Vesta.info("%d/%02d/%02d (idx=%d) ✂️ Ajustando %s a ventana comun: %d - %d", targetYear, targetMonth, targetDay, normalizedDayIndex, symbol, commonStart, commonEnd);
+                // borrar por inicio
+                while (!candlesSorted.isEmpty() && candlesSorted.getFirst().getOpenTime() < commonStart) {
+                    candlesSorted.removeFirst();
                 }
-                if (candles.isEmpty()) {
-                    Vesta.info("Datos incompletos o corruptos para %s en %d/%02d/%02d (idx=%d)", s, targetYear, targetMonth, targetDay, normalizedDayIndex);
-                    latch.countDown();
-                    return marketFinal.get();
-                }
-                int sizeCandles = candles.size();
-                int sizeTrades = trades.size();
-                Vesta.info("%d/%02d/%02d (idx=%d) 🔒 Asegurando orden de los datos", targetYear, targetMonth, targetDay, normalizedDayIndex);
-                LinkedHashSet<Candle> candlesSorted = Market.sortd(candles, 10_000, Candle::getOpenTime);
-                LinkedHashSet<Trade> tradeSorted = Market.sortd(trades, 10_000, Trade::time);
-
-                if (loadTrades){
-                    // 3. Lógica de CORTE (Sincronización de tiempos)
-                    long minTimeCandles = candlesSorted.getFirst().getOpenTime();
-                    long maxTimeCandles = candlesSorted.getLast().getOpenTime();
-
-                    long minTimeTrades = tradeSorted.getFirst().time();
-                    long maxTimeTrades = tradeSorted.getLast().time();
-
-                    long commonStart = Math.max(minTimeCandles, minTimeTrades);
-                    long commonEnd = Math.min(maxTimeCandles, maxTimeTrades);
-
-                    Vesta.info("%d/%02d/%02d (idx=%d) ✂️ Ajustando %s a ventana comun: %d - %d", targetYear, targetMonth, targetDay, normalizedDayIndex, s, commonStart, commonEnd);
-                    // borrar por inicio
-//                    while (!candlesSorted.isEmpty() && candlesSorted.getFirst().openTime() < commonStart) {
-//                        candlesSorted.removeFirst();
-//                    }
-                    // borrar por final
-                    while (!candlesSorted.isEmpty() && candlesSorted.getLast().getOpenTime() > commonEnd) {
-                        candlesSorted.removeLast();
-                    }
-
-                    // mismo para trades
-                    while (!tradeSorted.isEmpty() && tradeSorted.getFirst().time() < commonStart) {
-                        tradeSorted.removeFirst();
-                    }
-                    while (!tradeSorted.isEmpty() && tradeSorted.getLast().time() > commonEnd) {
-                        tradeSorted.removeLast();
-                    }
+                // borrar por final
+                while (!candlesSorted.isEmpty() && candlesSorted.getLast().getOpenTime() > commonEnd) {
+                    candlesSorted.removeLast();
                 }
 
-                final Market market = new Market(s);
-                market.setCandles(candlesSorted);
-                market.setTrade(tradeSorted);
-                //market.sortd();
-
-                marketFinal.set(market);
-                lastUpdate.set(System.currentTimeMillis());
-
-                Vesta.info("%d/%02d/%02d (idx=%d) 🟩 Mercado cargado desde DISCO: %s (C: %d, T: %d) en %.2fs",
-                        targetYear, targetMonth, targetDay, normalizedDayIndex, s, sizeCandles, sizeTrades, (float) (System.currentTimeMillis() - timeTotal) / 1000);
-
-                latch.countDown();
+                // mismo para trades
+                while (!tradeSorted.isEmpty() && tradeSorted.getFirst().time() < commonStart) {
+                    tradeSorted.removeFirst();
+                }
+                while (!tradeSorted.isEmpty() && tradeSorted.getLast().time() > commonEnd) {
+                    tradeSorted.removeLast();
+                }
             }
+
+            final Market market = new Market(symbol, timeFrameMarket);
+            market.setCandles(candlesSorted);
+            market.setTrade(tradeSorted);
+
+            Vesta.info("%d/%02d/%02d (idx=%d) 🟩 Mercado cargado desde DISCO: %s (C: %d, T: %d) en %.2fs",
+                    targetYear, targetMonth, targetDay, normalizedDayIndex, symbol, sizeCandles, sizeTrades, (float) (System.currentTimeMillis() - timeTotal) / 1000);
+            return market;
+        }catch (IOException e){
+            Vesta.sendWaringException("error al cargar los datos de forma local", e);
+            return null;
         }
-        latch.await();
-        return marketFinal.get();
-    }
 
-    @Getter
-    private class OrderBookRaw {
-        private long lastUpdateId;
-        private List<List<String>> bids;
-        private List<List<String>> asks;
     }
 
     public static LocalDate resolveDateFromDayIndex(int dayIndex) {
@@ -281,19 +278,28 @@ public class IOMarket {
     }
 
 
-    private static File ensureFileCached(String baseDir, Symbol symbol, String type, LocalDate date) throws IOException {
+    @SuppressWarnings("ResultOfMethodCallIgnored")
+    private static File ensureFileCached(TypeMarket typeMarket, @NotNull TypeData type, @NotNull LocalDate date) throws IOException {
+        final Symbol symbol = typeMarket.symbol();
+        final TimeFrameMarket timeFrameMarket = typeMarket.timeFrameMarket();
+
         String monthStr = String.format("%02d", date.getMonthValue());
         String dayStr = String.format("%02d", date.getDayOfMonth());
         String dateStr = String.format("%d-%s-%s", date.getYear(), monthStr, dayStr);
+
         // Nombre del archivo segun convencion de Binance (daily)
-        String baseName = type.equals("klines")
-                ? String.format("%s-1m-%s", symbol, dateStr)
-                : String.format("%s-trades-%s", symbol, dateStr);
+        String baseName = switch (type){
+            case TRADES -> String.format("%s-trades-%s", symbol, dateStr);
+            case KLINES ->  String.format("%s-%s-%s", symbol, timeFrameMarket.getKeyName(), dateStr);
+            case DEPTH -> throw new UnsupportedOperationException();
+        };
+
         String fileNameZip = baseName + EXT_ZIP;
         String fileNameBin = baseName + EXT_BIN;
         String fileNameBinZst = baseName + EXT_BIN_ZST;
+
         // Estructura: ./data/ETHUSDT/klines/2025-12/ETHUSDT-1m-2025-12-01.bin.zst
-        File dir = new File(baseDir + File.separator + symbol + File.separator + type + File.separator + date.getYear() + "-" + monthStr);
+        File dir = new File(STORAGE_DIR + File.separator + symbol + File.separator + type.name().toLowerCase(Locale.ROOT) + File.separator + date.getYear() + "-" + monthStr);
         if (!dir.exists()) {
             dir.mkdirs(); // Crea la estructura de carpetas si no existe
         }
@@ -302,7 +308,11 @@ public class IOMarket {
         File targetFileBin = new File(dir, fileNameBin);
         File targetFileBinZst = new File(dir, fileNameBinZst);
 
-        ParseSerializable<?> serializable = type.equals("klines") ? new KlinesSerializable() : new TradeSerializable();
+        ParseSerializable<?> serializable = switch (type){
+            case KLINES -> new KlinesSerializable();
+            case TRADES -> new TradeSerializable();
+            case DEPTH -> throw new UnsupportedOperationException();
+        };
 
         if (targetFileBin.exists() && targetFileBin.length() > 0) {
             return targetFileBin;
@@ -315,17 +325,17 @@ public class IOMarket {
         }
 
         // Construir URL de descarga
-        String urlTypePath = type.equals("klines") ? "klines" : "trades"; // URL path segment
-        String urlInterval = type.equals("klines") ? "/1m" : ""; // Trades no tienen intervalo en la URL
+        String urlTypePath = type.name().toLowerCase(Locale.ROOT); // URL path segment
+        String urlInterval = type.equals(TypeData.KLINES) ? "/" + timeFrameMarket.getKeyName() : ""; // Trades no tienen intervalo en la URL
 
         String urlString = String.format("https://data.binance.vision/data/futures/um/daily/%s/%s%s/%s",
                 urlTypePath, symbol, urlInterval, fileNameZip);
 
         Vesta.info("📥 Descargando nuevo archivo: " + fileNameZip + " (" + urlString + ")");
 
-        try (InputStream in = new URL(urlString).openStream()) {
+        try (InputStream in = new URI(urlString).toURL().openStream()) {
             Files.copy(in, targetFileZip.toPath(), StandardCopyOption.REPLACE_EXISTING);
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             // Si falla la descarga, borramos el archivo vacio/corrupto para no romper ejecuciones futuras
             if (targetFileZip.exists()) targetFileZip.delete();
             throw new IOException("Fallo al descargar " + urlString, e);
@@ -412,7 +422,7 @@ public class IOMarket {
         return parseFromCSVandWriteBin(file, parseCSV, parseCSV);
     }
 
-    private static <T> @NotNull Deque<T> parseFromCSVandWriteBin(File file, SerializableCSV<T> SerializableCSV, SerializableBin<T> SerializableBin) {
+    private static <T> @NotNull Deque<T> parseFromCSVandWriteBin(File file, SerializableCSV<T> SerializableCSV, SerializableBin<T> serializableBin) {
         Deque<T> list = new ArrayDeque<>();
         if (!file.exists()) return list;
         if (!file.getName().endsWith(EXT_ZIP)) return list;
@@ -461,10 +471,11 @@ public class IOMarket {
             try {
                 String entryName = binEntryName(file);
                 rewriteZipWithBinEntry(file, entryName, out -> {
-                    out.writeInt(SerializableBin.getMagic());
+                    out.writeInt(serializableBin.getMagic());
                     out.writeInt(BIN_VERSION);
-                    for (T trade : list) {
-                        SerializableBin.writeBin(out, trade);
+                    serializableBin.writeMetaDataBin(out, list.getFirst());
+                    for (T source : list) {
+                        serializableBin.writeBin(out, source);
                     }
                 });
                 wrote = true;
@@ -479,8 +490,10 @@ public class IOMarket {
     }
 
     public interface SerializableBin<T> {
+        void writeMetaDataBin(DataOutput out, @NotNull T source)throws IOException;
         void writeBin(DataOutput out, T source) throws IOException;
-        Deque<T> readBin(DataInputStream in) throws IOException;
+        T readBin(DataInputStream in) throws IOException;
+        void readMetaDataBin(DataInputStream in) throws IOException;
         int getMagic();
     }
 
@@ -517,12 +530,7 @@ public class IOMarket {
     ////////////////////////////////////////////////////////////////////////////////////////////////////////
     ////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-
-
-    ////////////////////////////////////////////////////////////////////////////////////////////////////////
-    ////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-    private static <T> Deque<T> parseFromBin(File binFile, SerializableBin<T> parseMethod) {
+    private static <T> @Nullable Deque<T> parseFromBin(File binFile, SerializableBin<T> parseMethod) {
         File candidate = binFile;
         if (candidate.getName().endsWith(EXT_BIN_ZST)) {
             File raw = new File(candidate.getParentFile(),
@@ -535,22 +543,46 @@ public class IOMarket {
             return null;
         }
         try (DataInputStream in = openBinInputStream(candidate)) {
-            return parseMethod.readBin(in);
+            return readBin(parseMethod, in);
         } catch (Exception e) {
             Vesta.info("Error leyendo binario: " + e.getMessage());
             return null;
         }
     }
 
-    private static DataInputStream openBinInputStream(File binFile) throws IOException {
+    private static <T> @Nullable Deque<T> readBin(@NotNull SerializableBin<T> parseMethod, @NotNull DataInputStream in) throws IOException {
+        int magic = in.readInt();
+        if (magic != parseMethod.getMagic()) {
+            return null;
+        }
+        int version = in.readInt();
+        if (version != BIN_VERSION) {
+            return null;
+        }
+        parseMethod.readMetaDataBin(in);
+        Deque<T> list = new ArrayDeque<>(5_000);
+        while (true) {
+            try {
+                list.add(parseMethod.readBin(in));
+            } catch (EOFException eof) {
+                break;
+            }
+        }
+        return list;
+    }
+
+    @Contract("_ -> new")
+    private static @NotNull DataInputStream openBinInputStream(File binFile) throws IOException {
         InputStream in = new BufferedInputStream(new FileInputStream(binFile), (1 << 20) * BUFFER_READ_MB);
         if (binFile.getName().endsWith(EXT_ZST)) {
             in = new ZstdInputStream(in);
         }
+        // Ensure mark/reset support for optional metadata reads.
+        in = new BufferedInputStream(in, 8 * 1024);
         return new DataInputStream(in);
     }
 
-    private static DataOutputStream openBinOutputStream(File binFile, boolean useZstd) throws IOException {
+    private static @NotNull DataOutputStream openBinOutputStream(File binFile, boolean useZstd) throws IOException {
         OutputStream out = new BufferedOutputStream(new FileOutputStream(binFile), (1 << 20) * BUFFER_READ_MB);
         if (useZstd) {
             ZstdOutputStream zOut = new ZstdOutputStream(out);
@@ -561,7 +593,7 @@ public class IOMarket {
         return new DataOutputStream(out);
     }
 
-    private static <T> Deque<T> parseFromBinInZip(File zipFile, SerializableBin<T> parse) {
+    private static <T> @Nullable Deque<T> parseFromBinInZip(File zipFile, SerializableBin<T> parse) {
         String entryName = binEntryName(zipFile);
         try (ZipFile zip = new ZipFile(zipFile)) {
             ZipEntry entry = zip.getEntry(entryName);
@@ -573,7 +605,7 @@ public class IOMarket {
                 return null;
             }
             try (DataInputStream in = new DataInputStream(new BufferedInputStream(zip.getInputStream(entry), (1 << 20) * BUFFER_READ_MB))) {
-                return parse.readBin(in);
+                return readBin(parse, in);
             }
         } catch (Exception e) {
             Vesta.info("Error leyendo Trades binario: " + e.getMessage());
@@ -589,7 +621,7 @@ public class IOMarket {
         void write(DataOutputStream out) throws IOException;
     }
 
-    public static void rewriteZipWithBinEntry(File zipFile, String entryName, BinWriter writer) throws IOException {
+    public static void rewriteZipWithBinEntry(@NotNull File zipFile, String entryName, @NotNull BinWriter writer) throws IOException {
         File parent = zipFile.getParentFile();
         File binFile = parent == null ? new File(entryName) : new File(parent, entryName);
         Path temp = Files.createTempFile(parent == null ? Paths.get(".") : parent.toPath(), binFile.getName(), ".tmp");
@@ -604,16 +636,12 @@ public class IOMarket {
         }
     }
 
-    private static void copyStream(InputStream in, OutputStream out) throws IOException {
+    private static void copyStream(@NotNull InputStream in, OutputStream out) throws IOException {
         byte[] buffer = new byte[(1 << 20) * BUFFER_READ_MB];
         int read;
         while ((read = in.read(buffer)) != -1) {
             out.write(buffer, 0, read);
         }
-    }
-
-    private static <T> void convertZipToBinZst(File zipFile, File binZstFile, String type, SerializableCSV<T> serializableCSV, SerializableBin<T> serializableBin) throws IOException {
-
     }
 
     private static void safeDelete(File file) {
@@ -625,7 +653,7 @@ public class IOMarket {
         }
     }
 
-    private static <T> void buildSourceBinFromZst(File zipFile, File binFile, ParseSerializable<T> serializable) throws IOException {
+    private static <T> void buildSourceBinFromZst(File zipFile, @NotNull File binFile, ParseSerializable<T> serializable) throws IOException {
         if (binFile.getParentFile() != null) {
             Files.createDirectories(binFile.getParentFile().toPath());
         }
@@ -633,6 +661,7 @@ public class IOMarket {
              DataOutputStream out = openBinOutputStream(binFile, binFile.getName().endsWith(EXT_ZST))) {
             out.writeInt(serializable.getMagic());
             out.writeInt(BIN_VERSION);
+            boolean hasMeta = false;
             ZipEntry entry;
             while ((entry = zis.getNextEntry()) != null) {
                 if (!entry.isDirectory() && entry.getName().endsWith(".csv")) {
@@ -640,7 +669,15 @@ public class IOMarket {
                     String line;
                     while ((line = br.readLine()) != null) {
                         if (line.isEmpty() || Character.isLetter(line.charAt(0))) continue; // Skip Header
-                        serializable.writeBin(out, serializable.parseLine(line));
+                        T source = serializable.parseLine(line);
+                        if (source == null) {
+                            continue;
+                        }
+                        if (!hasMeta) {
+                            serializable.writeMetaDataBin(out, source);
+                            hasMeta = true;
+                        }
+                        serializable.writeBin(out, source);
                     }
                 }
             }
@@ -674,7 +711,7 @@ public class IOMarket {
         }
     }
 
-    private static void extractBinFromZst(Path binZstPath) throws IOException {
+    private static void extractBinFromZst(@NotNull Path binZstPath) throws IOException {
         String name = binZstPath.getFileName().toString();
         String outName = name.endsWith(EXT_ZST) ? name.substring(0, name.length() - EXT_ZST.length()) : name;
         Path outputPath = binZstPath.getParent().resolve(outName);
@@ -714,6 +751,13 @@ public class IOMarket {
             }
         }
     }
-}
 
+    private record OrderBookRaw(List<List<String>> bids, List<List<String>> asks) {}
+
+    private enum TypeData{
+        KLINES,
+        TRADES,
+        DEPTH
+    }
+}
 
